--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
 
 
-VITE_API_URL=VITE_API_URL=https://proyecto13-backend.onrender.com/api/v1
+VITE_API_URL=https://proyecto13-backend.onrender.com/api/v1
